Исправил последние ошибки

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
       <ul class="navigation-list">
         <li class="navigation-item">
           <a class="navigation-link navigation-logo navigation-catalog" href="index.html">
-            <img class="logo" src="img/logo-glacy.svg" alt="Логотип магазина мороженого Глейси" width="137" height="56">
+            <img class="logo" src="img/logo-glacy.svg" alt="Логотип магазина мороженого Глейси." width="137" height="56">
           </a>
         </li>
         <li class="navigation-item">
@@ -61,7 +61,7 @@
             <h4 class="navigation-title">Корзина</h4>
             <ul class="basket-list">
               <li class="basket-item">
-                <img class="basket-image" src="img/basket-product-1.jpg" alt="Малинка" width="46" height="46">
+                <img class="basket-image" src="img/basket-product-1.jpg" alt="Малинка." width="46" height="46">
                 <div class="basket-product-info">
                   <p class="basket-product-name">Малинка</p>
                   <span class="basket-product-amount">1 кг х 310 ₽</span>
@@ -72,7 +72,7 @@
                 </button>
               </li>
               <li class="basket-item">
-                <img class="basket-image" src="img/basket-product-2.jpg" alt="Бабл-гам" width="46" height="46">
+                <img class="basket-image" src="img/basket-product-2.jpg" alt="Бабл-гам." width="46" height="46">
                 <div class="basket-product-info">
                   <p class="basket-product-name">Бабл-гам</p>
                   <span class="basket-product-amount">1,5 кг х 320 ₽</span>
@@ -225,7 +225,7 @@
         <ul class="product-list product-list-catalog">
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="img/ice-cream-raspberry.png" alt="Малина" width="168" height="168">
+              <img class="product-image" src="img/ice-cream-raspberry.png" alt="Малина." width="168" height="168">
               <h5 class="product-item-title">Малинка</h5>
               <p class="product-item-description">Сливочное мороженое с малиновым джемом</p>
             </a>
@@ -239,7 +239,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="img/ice-cream-pistachio.png" alt="Фисташка" width="168" height="168">
+              <img class="product-image" src="img/ice-cream-pistachio.png" alt="Фисташка." width="168" height="168">
               <h5 class="product-item-title">Фисташка</h5>
               <p class="product-item-description">Фисташковый пломбир с кусочками шоколада</p>
             </a>
@@ -253,7 +253,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="img/ice-cream-blueberries.png" alt="Черника" width="168" height="168">
+              <img class="product-image" src="img/ice-cream-blueberries.png" alt="Черника." width="168" height="168">
               <h5 class="product-item-title">Черника</h5>
               <p class="product-item-description">Крем-брюле<br> с черничным джемом</p>
             </a>
@@ -267,7 +267,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="img/ice-cream-bubble.png" alt="Бабл-гам" width="168" height="168">
+              <img class="product-image" src="img/ice-cream-bubble.png" alt="Бабл-гам." width="168" height="168">
               <h5 class="product-item-title">Бабл-гам</h5>
               <p class="product-item-description">Ванильный пломбир<br> со сладкой посыпкой</p>
             </a>
@@ -281,7 +281,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="img/ice-cream-blackberry.png" alt="Ежевика" width="168" height="168">
+              <img class="product-image" src="img/ice-cream-blackberry.png" alt="Ежевика." width="168" height="168">
               <h5 class="product-item-title">Ежевика</h5>
               <p class="product-item-description">Сливочное мороженое с ежевичным джемом</p>
             </a>
@@ -295,7 +295,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="img/ice-cream-banana.png" alt="Банан" width="168" height="168">
+              <img class="product-image" src="img/ice-cream-banana.png" alt="Банан." width="168" height="168">
               <h5 class="product-item-title">Банан</h5>
               <p class="product-item-description">Сливочный пломбир<br> с банановым вкусом</p>
             </a>
@@ -309,7 +309,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="img/ice-cream-chocolate.png" alt="Шоколадка" width="168" height="168">
+              <img class="product-image" src="img/ice-cream-chocolate.png" alt="Шоколадка." width="168" height="168">
               <h5 class="product-item-title">Шоколадка</h5>
               <p class="product-item-description">Классический шоколадный пломбир</p>
             </a>
@@ -323,7 +323,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="img/ice-cream-stawberry.png" alt="Клубничка" width="168" height="168">
+              <img class="product-image" src="img/ice-cream-stawberry.png" alt="Клубничка." width="168" height="168">
               <h5 class="product-item-title">Клубничка</h5>
               <p class="product-item-description">Сливочный пломбир<br> с клубничным вкусом</p>
             </a>
@@ -337,7 +337,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="img/ice-cream-lemon.png" alt="Лимон" width="168" height="168">
+              <img class="product-image" src="img/ice-cream-lemon.png" alt="Лимон." width="168" height="168">
               <h5 class="product-item-title">Лимон</h5>
               <p class="product-item-description">Освежающий лимонный сорбет</p>
             </a>
@@ -351,7 +351,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="img/ice-cream-menthol.png" alt="Ментол" width="168" height="168">
+              <img class="product-image" src="img/ice-cream-menthol.png" alt="Ментол." width="168" height="168">
               <h5 class="product-item-title">Ментол</h5>
               <p class="product-item-description">Сливочный пломбир<br> с ментоловым сиропом</p>
             </a>
@@ -365,7 +365,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="img/ice-cream-nut.png" alt="Орешек" width="168" height="168">
+              <img class="product-image" src="img/ice-cream-nut.png" alt="Орешек." width="168" height="168">
               <h5 class="product-item-title">Орешек</h5>
               <p class="product-item-description">Фисташковый пломбир с шоколадным сиропом</p>
             </a>
@@ -379,7 +379,7 @@
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
-              <img class="product-image" src="img/ice-cream-brulee.png" alt="Крем-брюле" width="168" height="168">
+              <img class="product-image" src="img/ice-cream-brulee.png" alt="Крем-брюле." width="168" height="168">
               <h5 class="product-item-title">Крем-брюле</h5>
               <p class="product-item-description">Классическое<br> крем-брюле </p>
             </a>
@@ -469,10 +469,10 @@
       <section class="footer-copyright">
         <h4 class="visually-hidden">Авторские права</h4>
         <a class="footer-copyright-logo" href="https://htmlacademy.ru/">
-          <img class="footer-logo-htmlacademy" src="img/logo-htmlacademy.svg" alt="Логотип htmlacademy" width="93" height="27">
+          <img class="footer-logo-htmlacademy" src="img/logo-htmlacademy.svg" alt="Логотип htmlacademy." width="93" height="27">
           <span class="visually-hidden">Ссылка на htmlacademy.</span>
         </a>
-        <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link" href="https://htmlacademy.ru/ aria-label="Ссылка на html academy">.html academy</a> © 2021</p>
+        <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link" href="https://htmlacademy.ru/" aria-label="Ссылка на html academy.">.html academy</a> © 2021</p>
       </section>
     </div>
   </footer>
