--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link navigation-logo" href="index.html">
-              <img class="logo" src="img/logo-glacy.svg" alt="Логотип магазина мороженого Глейси" width="137" height="56">
+              <img class="logo" src="img/logo-glacy.svg" alt="Логотип магазина мороженого Глейси." width="137" height="56">
             </a>
           </li>
           <li class="navigation-item">
@@ -79,7 +79,7 @@
             <div class="slider-content slider-content-current">
               <h2 class="slider-content-title">Нежный пломбир <br>с клубничным джемом</h2>
               <p class="slider-content-description">Натуральное мороженое из свежих сливок<br> и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
-              <a class="btn btn-white" href="#" aria-label="Заказать">Заказать</a>
+              <a class="btn btn-white" href="#" aria-label="Заказать.">Заказать</a>
             </div>
             <div class="slider-content">
               <h2 class="slider-content-title">Сливочное мороженое со вкусом банана</h2>
@@ -95,7 +95,7 @@
           <div class="slider-picture-wrapper">
             <div class="slider-picture slider-picture-current">
               <div class="picture-main">
-                <img class="slider-picture-icecream" src="img/ice-cream-strawberry-jam.png" alt="Нежный пломбир с клубничным джемом" width="306" height="507">
+                <img class="slider-picture-icecream" src="img/ice-cream-strawberry-jam.png" alt="Нежный пломбир с клубничным джемом." width="306" height="507">
                 <button class="slider-button slider-prev" type="button">
                   <svg class="arrow-left" width="6" height="12" fill="none" viewBox="0 0 6 12" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M5.8 1.8a.66.66 0 1 0-.94-.94L.2 5.53a.66.66 0 0 0 0 .94l4.67 4.67a.66.66 0 0 0 .94-.94L1.6 6l4.2-4.2Z"/></svg>
                   <span class="visually-hidden">Предыдущее фото.</span>
@@ -106,33 +106,33 @@
                 </button>
               </div>
               <div class="picture-second">
-                <img class="slider-image slider-image-small" src="img/ice-cream-butter.png" alt="Сливочное мороженое со вкусом банана" width="66" height="150">
+                <img class="slider-image slider-image-small" src="img/ice-cream-butter.png" alt="Сливочное мороженое со вкусом банана." width="66" height="150">
               </div>
               <div class="picture-third">
-                <img class="slider-image slider-image-small" src="img/ice-cream-caramel-marshmellow.png" alt="Карамельный пломбир с маршмеллоу" width="66" height="150">
+                <img class="slider-image slider-image-small" src="img/ice-cream-caramel-marshmellow.png" alt="Карамельный пломбир с маршмеллоу." width="66" height="150">
               </div>
             </div>
             <div class="slider-picture">
-              <img class="slider-picture-icecream" src="img/ice-cream-butter.png" alt="Сливочное мороженое со вкусом банана" width="306" height="507">
+              <img class="slider-picture-icecream" src="img/ice-cream-butter.png" alt="Сливочное мороженое со вкусом банана." width="306" height="507">
               <button class="slider-button slider-prev" type="button">
                 <span class="visually-hidden">Предыдущее фото.</span>
               </button>
               <button class="slider-button slider-next" type="button">
                 <span class="visually-hidden">Следующее фото.</span>
               </button>
-              <img src="img/ice-cream-caramel-marshmellow.png" alt="Карамельный пломбир с маршмеллоу" class="slider-image slider-image-size" width="66" height="150">
-              <img src="img/ice-cream-strawberry-jam.png" alt="Нежный пломбир с клубничным джемом" class="slider-image slider-image-size" width="66" height="150">
+              <img src="img/ice-cream-caramel-marshmellow.png" alt="Карамельный пломбир с маршмеллоу." class="slider-image slider-image-size" width="66" height="150">
+              <img src="img/ice-cream-strawberry-jam.png" alt="Нежный пломбир с клубничным джемом." class="slider-image slider-image-size" width="66" height="150">
             </div>
             <div class="slider-picture">
-              <img class="slider-picture-icecream" src="img/ice-cream-caramel-marshmellow.png" alt="Карамельный пломбир с маршмеллоу" width="306" height="507">
+              <img class="slider-picture-icecream" src="img/ice-cream-caramel-marshmellow.png" alt="Карамельный пломбир с маршмеллоу." width="306" height="507">
               <button class="slider-button slider-prev" type="button">
                 <span class="visually-hidden">Предыдущее фото.</span>
               </button>
               <button class="slider-button slider-next" type="button">
                 <span class="visually-hidden">Следующее фото.</span>
               </button>
-              <img src="img/ice-cream-strawberry-jam.png" alt="Нежный пломбир с клубничным джемом" class="slider-image slider-image-size" width="66" height="150">
-              <img src="img/ice-cream-butter.png" alt="Сливочное мороженое со вкусом банана" class="slider-image slider-image-size" width="66" height="150">
+              <img src="img/ice-cream-strawberry-jam.png" alt="Нежный пломбир с клубничным джемом." class="slider-image slider-image-size" width="66" height="150">
+              <img src="img/ice-cream-butter.png" alt="Сливочное мороженое со вкусом банана." class="slider-image slider-image-size" width="66" height="150">
             </div>
           </div>
         </div>
@@ -183,20 +183,20 @@
               <div class="offers-raspberry-wrapper">
                 <h4 class="offers-raspberry-title">Малинка даром!</h4>
                 <p class="offers-raspberry-description">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</p>
-                <a class="btn btn-white" href="#" aria-label="Хочу подарок">Хочу подарок</a>
+                <a class="btn btn-white" href="#" aria-label="Хочу подарок.">Хочу подарок</a>
               </div>
               <div class="offers-raspberry-image-wrapper">
-                <img class="offers-raspberry-image" src="img/basket-raspberries.png" alt="Корзинка с малиной" width="181" height="240">
+                <img class="offers-raspberry-image" src="img/basket-raspberries.png" alt="Корзинка с малиной." width="181" height="240">
               </div>
             </div>
             <div class="offers-marshmallow">
               <div class="offers-marshmallow-wrapper">
                 <h4 class="offers-marshmallow-title">Маршмеллоу даром!</h4>
                 <p class="offers-marshmallow-description">При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
-                <a class="btn btn-white" href="#" aria-label="Хочу подарок">Хочу подарок</a>
+                <a class="btn btn-white" href="#" aria-label="Хочу подарок.">Хочу подарок</a>
               </div>
               <div class="offers-marshmallow-image-wrapper">
-                <img class="offers-marshmallow-image" src="img/basket-marshmallows.png" alt="Корзинка с маршмеллоу" width="232" height="249">
+                <img class="offers-marshmallow-image" src="img/basket-marshmallows.png" alt="Корзинка с маршмеллоу." width="232" height="249">
               </div>
             </div>
           </div>
@@ -206,7 +206,7 @@
           <ul class="product-list">
             <li class="product-item">
               <a class="product-item-link" href="#">
-                <img class="product-image" src="img/ice-cream-raspberry.png" alt="Малина" width="168" height="168">
+                <img class="product-image" src="img/ice-cream-raspberry.png" alt="Малина." width="168" height="168">
                 <h5 class="product-item-title">Малинка</h5>
                 <p class="product-item-description">Сливочное мороженое с малиновым джемом</p>
               </a>
@@ -220,7 +220,7 @@
             </li>
             <li class="product-item">
               <a class="product-item-link" href="#">
-                <img class="product-image" src="img/ice-cream-pistachio.png" alt="Фисташка" width="168" height="168">
+                <img class="product-image" src="img/ice-cream-pistachio.png" alt="Фисташка." width="168" height="168">
                 <h5 class="product-item-title">Фисташка</h5>
                 <p class="product-item-description">Фисташковый пломбир с кусочками шоколада</p>
               </a>
@@ -234,7 +234,7 @@
             </li>
             <li class="product-item">
               <a class="product-item-link" href="#">
-                <img class="product-image" src="img/ice-cream-blueberries.png" alt="Черника" width="168" height="168">
+                <img class="product-image" src="img/ice-cream-blueberries.png" alt="Черника." width="168" height="168">
                 <h5 class="product-item-title">Черника</h5>
                 <p class="product-item-description">Крем-брюле<br> с черничным джемом</p>
               </a>
@@ -248,7 +248,7 @@
             </li>
             <li class="product-item">
               <a class="product-item-link" href="#">
-                <img class="product-image" src="img/ice-cream-bubble.png" alt="Бабл-гам" width="168" height="168">
+                <img class="product-image" src="img/ice-cream-bubble.png" alt="Бабл-гам." width="168" height="168">
                 <h5 class="product-item-title">Бабл-гам</h5>
                 <p class="product-item-description">Ванильный пломбир<br> со сладкой посыпкой</p>
               </a>
@@ -295,7 +295,7 @@
               <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
                 <label class="visually-hidden" for="subscribe-email">Email</label>
                 <input class="subscribe-form-field" type="email" id="subscribe-email" name="subscribe-email" placeholder="email@example.com" required>
-                <button class="btn btn-red" type="button" aria-label="Отправить">Отправить</button>
+                <button class="btn btn-red" type="button" aria-label="Отправить.">Отправить</button>
               </form>
             </div>
           </section>
@@ -332,7 +332,7 @@
                 </span>
                 <input type="text" id="delivery-address" name="delivery-address" placeholder="ул. Большая Конюшенная, 19/8">
               </p>
-              <button class="btn-red btn-delivery" type="button" aria-label="Отправить">Отправить</button>
+              <button class="btn-red btn-delivery" type="button" aria-label="Отправить.">Отправить</button>
             </form>
           </div>
         </section>
@@ -344,7 +344,7 @@
             <p class="contacts-text">Для заказов по телефону:</p>
             <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
             <p class="contacts-worktime">(с 10 до 20 ежедневно)</p>
-            <a class="btn btn-red contacts-btn" href="#" aria-label="Форма обратной связи">Форма обратной связи</a>
+            <a class="btn btn-red contacts-btn" href="#" aria-label="Форма обратной связи.">Форма обратной связи</a>
           </div>
         </section>
       </div>
@@ -390,8 +390,11 @@
         </section>
         <section class="footer-copyright">
           <h4 class="visually-hidden">Авторские права</h4>
-          <img class="footer-logo-htmlacademy" src="img/logo-htmlacademy.svg" alt="Логотип htmlacademy" width="93" height="27">
-          <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link" aria-label="Ссылка на html academy">.html academy</a> © 2021</p>
+          <a class="footer-copyright-logo" href="https://htmlacademy.ru/">
+            <img class="footer-logo-htmlacademy" src="img/logo-htmlacademy.svg" alt="Логотип htmlacademy." width="93" height="27">
+            <span class="visually-hidden">Ссылка на htmlacademy.</span>
+          </a>
+          <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link" href="https://htmlacademy.ru/" aria-label="Ссылка на html academy.">.html academy</a> © 2021</p>
         </section>
       </div>
     </footer>
